# neb-ex1

./: .gitignore  README.md  envrc.example  evaluate-model.py  fsdp2_config.yaml  llm.py  llm.sh  main.py  pyproject.toml  wrapper.sh
checks/: complete_nlp_example.py  ds-test.py  mn-lightning.sh  multinode.sh  testcheck.py  testcheck.sh
infrastructure/: README.md  infra.envrc  terraform.tfvars
