[project]
name = "ex1-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "deepspeed>=0.17.0",
    "evaluate>=0.4.3",
    "fastai>=2.8.2",
    "flash-attn>=2.7.4.post1",
    "ipython>=8.37.0",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.1",
    "peft>=0.15.2",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "rouge-score>=0.1.2",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "triton>=3.3.0",
    "trl>=0.18.1",
]
